emoved few plays from install_telnet

--- a/install_telnet.yml
+++ b/install_telnet.yml
@@ -1,23 +1,13 @@
  
-- hosts: 172.31.14.211
-  user: docker
+- hosts: localhost ansible_connection=local
+  user: ec2-user
   become: yes
   tasks:
     - name: Date and Time the playbook started
-      command: /bin/date
+      command: date
       register: timestamp_start
     - debug: var=timestamp_start
-    - name: Install httpd on server
-      yum: pkg=httpd state=latest
-      notify: Start HTTPD
-    - name: update yum repo
-      command: yum update
     - name: Install lynx
       yum: pkg=lynx state=latest
     - name: Install telnet
       yum: pkg=telnet state=latest
-      handlers:
-    - name: Start HTTPD
-      service: name=httpd state=restarted
-    - name: verify web service is running
-      command: systemctl status httpd
