--- a/install_telnet.yml
+++ b/install_telnet.yml
@@ -1,13 +1,15 @@
  
-- hosts: localhost ansible_connection=local
-  user: ec2-user
+- hosts: 35.154.4.205
+  user: rakeshmadhyastha788 ansible_ssh_private_key_file: /home/ec2-user/secrets/gcSecrets/gc.ppk
   become: yes
   tasks:
+    - name: display hostname
+      cmd: hostname
     - name: Date and Time the playbook started
       command: date
       register: timestamp_start
     - debug: var=timestamp_start
-    - name: Install wget
-      yum: pkg=wget state=latest
+        - name: Install wget
+      yum: pkg=wget state=absent
     - name: Install telnet
       yum: pkg=telnet state=latest
