--- a/install_telnet.yml
+++ b/install_telnet.yml
@@ -1,6 +1,6 @@
  
 - hosts: 35.154.4.205
-  user: rakeshmadhyastha788 ansible_ssh_private_key_file: /home/ec2-user/secrets/gcSecrets/gc.ppk
+  user: rakeshmadhyastha788 ansible_ssh_private_key_file=/home/ec2-user/secrets/gcSecrets/gc.ppk
   become: yes
   tasks:
     - name: display hostname
