--- a/install_telnet.yml
+++ b/install_telnet.yml
@@ -4,7 +4,7 @@
   become: yes
   tasks:
     - name: display hostname
-      cmd: hostname
+      command: hostname
     - name: Date and Time the playbook started
       command: date
       register: timestamp_start
