--- a/install_telnet.yml
+++ b/install_telnet.yml
@@ -9,7 +9,7 @@
       command: date
       register: timestamp_start
     - debug: var=timestamp_start
-    - name: Install wget
+    - name: unInstall wget
       yum: pkg=wget state=absent
     - name: Install telnet
       yum: pkg=telnet state=latest
