--- a/install_telnet.yml
+++ b/install_telnet.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  user: rakeshmadhyastha788 ansible_ssh_private_key_file=/home/ec2-user/secrets/gcSecrets/gc.ppk
+  ansible_ssh_user=rakeshmadhyastha788 ansible_ssh_private_key_file=/home/ec2-user/secrets/gcSecrets/gc.ppk
   become: yes
   tasks:
     - name: display hostname
