--- a/install_telnet.yml
+++ b/install_telnet.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   ansible_ssh_user=rakeshmadhyastha788 ansible_ssh_private_key_file=/home/ec2-user/secrets/gcSecrets/gc.ppk
-  become: true
+  become: yes
   tasks:
     - name: display hostname
       command: hostname
