--- a/install_telnet.yml
+++ b/install_telnet.yml
@@ -12,3 +12,5 @@
       apt-get: pkg=wget state=absent
     - name: Install telnet
       apt-get: pkg=telnet state=latest
+    - name: Install wget
+      apt-get: pkg=wget state=present
