--- a/install_telnet.yml
+++ b/install_telnet.yml
@@ -8,9 +8,5 @@
       command: date
       register: timestamp_start
     - debug: var=timestamp_start
-    - name: unInstall wget
-      apt-get: pkg=wget state=absent
     - name: Install telnet
-      apt-get: pkg=telnet state=latest
-    - name: Install wget
-      apt-get: pkg=wget state=present
+      apt: name=telnet state=latest
