--- a/Tomcat_install_start.yml
+++ b/Tomcat_install_start.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: remote
+- hosts: rrp
   tasks:
   - name: Download Tomcat
     get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/opt/apache-tomcat-7.0.61.tar.gz
