--- a/Tomcat_install_start.yml
+++ b/Tomcat_install_start.yml
@@ -5,7 +5,7 @@
     get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/opt/apache-tomcat-7.0.61.tar.gz
 
   - name: Extract archive
-    command: chdir=/home/tomcat/ /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
+    command: chdir=/home/tomcat /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
 
   - name: Symlink install directory
     file: src=/opt/apache-tomcat-7.0.61 path=/home/tomcat state=link
