--- a/Tomcat_install_start.yml
+++ b/Tomcat_install_start.yml
@@ -2,10 +2,10 @@
 - hosts: rrp
   tasks:
   - name: Download Tomcat
-    get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/opt/apache-tomcat-7.0.61.tar.gz
+    get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/opt/tomcat
 
   - name: Extract archive
-    command: chdir=/home/tomcat /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
+    command: chdir=/home/tomcat /bin/tar xzvf /opt/tomcat/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
 
   - name: Symlink install directory
     file: src=/opt/apache-tomcat-7.0.61 path=/home/tomcat state=link
