--- a/Tomcat_install_start.yml
+++ b/Tomcat_install_start.yml
@@ -1,18 +1,13 @@
 ---
 - hosts: rrp
-  gather_facts: yes
+  gather_facts: no
   tasks:
   - name: Download Tomcat
-    get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/home/tomcat/apache-tomcat-7.0.61.tar.gz
+    command: cd /home/tomcat
+    get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz
 
   - name: Extract archive
-    command: chdir=/home/tomcat/apache-tomcat-7.0.61.tar.gz /bin/tar xzvf /home/tomcat/apache-tomcat-7.0.61.tar.gz -C /home/tomcat/ creates=/home/tomcat/apache-tomcat-7.0.61
-
-  - name: Symlink install directory
-    file: src=/home/tomcat/apache-tomcat-7.0.61 path=/home/tomcat/tomcat state=link
-
-  - name: Change ownership of Tomcat installation
-    file: path=/home/tomcat/ owner=tomcat group=tomcat state=directory recurse=yes
+    command: /bin/tar xzvf /home/tomcat/apache-tomcat-7.0.61.tar.gz
 
   - name: Start Tomcat
     command: /home/tomcat/apache-tomcat-7.0.61/bin/startup.sh
