--- a/Tomcat_install_start.yml
+++ b/Tomcat_install_start.yml
@@ -3,9 +3,8 @@
   gather_facts: no
   tasks:
   - name: Download Tomcat
-    command: cd
-    get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz
-
+    get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz destination=/home/tomcat/apache-tomcat-7.0.61.tar.gz
+    
   - name: Extract archive
     command: /bin/tar xzvf /home/tomcat/apache-tomcat-7.0.61.tar.gz
 
