--- a/Tomcat_install_start.yml
+++ b/Tomcat_install_start.yml
@@ -2,15 +2,17 @@
 - hosts: rrp
   gather_facts: no
   tasks:
-   - name: Download Tomcat
-     command: cd
-     get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz
+  - name: Download Tomcat
+    get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/opt/apache-tomcat-7.0.61.tar.gz
 
-   - name: Extract archive
-     command: /bin/tar xzvf /home/tomcat/apache-tomcat-7.0.61.tar.gz
+  - name: Extract archive
+    command: chdir=/usr/share /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
 
-   - name: Start Tomcat
-     command: /home/tomcat/apache-tomcat-7.0.61/bin/startup.sh
+  - name: Symlink install directory
+    file: src=/opt/apache-tomcat-7.0.61 path=/usr/share/tomcat state=link
 
-   - name: wait for tomcat to start
-     wait_for: port=8080
+  - name: Change ownership of Tomcat installation
+    file: path=/usr/share/tomcat/ owner=tomcat group=tomcat state=directory recurse=yes
+
+  - name: Start Tomcat
+    command: /home/tomcat/apache-tomcat-7.0.61/bin/startup.sh
