--- a/Tomcat_install_start.yml
+++ b/Tomcat_install_start.yml
@@ -9,10 +9,10 @@
     command: chdir=/home/tomcat /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
 
   - name: Symlink install directory
-    file: src=/opt/apache-tomcat-7.0.61 path=/home/tomcat/tomcat state=link
+    file: src=/opt/apache-tomcat-7.0.61 path=/home/tomcat/ state=link
 
   - name: Change ownership of Tomcat installation
-    file: path=/home/tomcat/tomcat/ owner=tomcat group=tomcat state=directory recurse=yes
+    file: path=/home/tomcat/ owner=tomcat group=tomcat state=directory recurse=yes
 
   - name: Start Tomcat
     command: /home/tomcat/apache-tomcat-7.0.61/bin/startup.sh
