--- a/Tomcat_install_start.yml
+++ b/Tomcat_install_start.yml
@@ -6,13 +6,13 @@
     get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/opt/apache-tomcat-7.0.61.tar.gz
 
   - name: Extract archive
-    command: chdir=/usr/share /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
+    command: chdir=/home/tomcat /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
 
   - name: Symlink install directory
-    file: src=/opt/apache-tomcat-7.0.61 path=/usr/share/tomcat state=link
+    file: src=/opt/apache-tomcat-7.0.61 path=/home/tomcat/ state=link
 
   - name: Change ownership of Tomcat installation
-    file: path=/usr/share/tomcat/ owner=tomcat group=tomcat state=directory recurse=yes
+    file: path=/home/tomcat/ owner=tomcat group=tomcat state=directory recurse=yes
 
   - name: Start Tomcat
     command: /home/tomcat/apache-tomcat-7.0.61/bin/startup.sh
