--- a/Tomcat_install_start.yml
+++ b/Tomcat_install_start.yml
@@ -6,7 +6,7 @@
     get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/opt/apache-tomcat-7.0.61.tar.gz
 
   - name: Extract archive
-    command: chdir=/home/tomcat /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
+    command: chdir=/home/tomcat /bin/tar xzvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
 
   - name: Change ownership of Tomcat installation
     file: path=/home/tomcat/ owner=tomcat group=tomcat state=directory recurse=yes
