--- a/Tomcat_install_start.yml
+++ b/Tomcat_install_start.yml
@@ -12,4 +12,4 @@
     file: path=/home/tomcat/ owner=tomcat group=tomcat state=directory recurse=yes
 
   - name: Start Tomcat
-    command: 'nohup /home/tomcat/bin/actions.sh'
+    command: '/home/tomcat/bin/actions.sh'
